added a functionality to ex01, \n left a little problem with displaying a SEARCH

--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -8,15 +8,15 @@ OBJS = $(subst .cpp,.o,$(SRC))
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-	$(GCC) $^ -o $@
+	@$(GCC) -fsanitize=address $^ -o $@
 %.o: %.cpp
 	$(GCC) $(CPP_FLAGS) $(OBJ_FLAG) $< -o $@
 
 clean : 
-	rm $(OBJS)
+	@rm $(OBJS)
 
 fclean : clean 
-	rm $(NAME)
+	@rm $(NAME)
 
 re: fclean all 
 
