--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -3,17 +3,21 @@ GCC = c++ -g
 OBJ_FLAG = -c
 CPP_FLAGS = -Wall -Wextra -Werror -std=c++98 
 SRC = AwesomePhonebook.cpp Contact.cpp PhoneBook.cpp 
-OBJS = $(subst .cpp,.o,$(SRC))
+OBJS_PATH = objs
+# OBJS = $($(OBJS_PATH)/subst .cpp,.o,$(SRC))
+ OBJS = $(addprefix $(OBJS_PATH)/, $(SRC:.cpp=.o))
 
 all : $(NAME)
 
 $(NAME) : $(OBJS)
 	@$(GCC) -fsanitize=address $^ -o $@
-%.o: %.cpp
+
+$(OBJS_PATH)/%.o: %.cpp
+	@mkdir -p $(OBJS_PATH)
 	$(GCC) $(CPP_FLAGS) $(OBJ_FLAG) $< -o $@
 
 clean : 
-	@rm $(OBJS)
+	@rm -rf $(OBJS_PATH)
 
 fclean : clean 
 	@rm $(NAME)
