--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -4,9 +4,9 @@ GCC = c++
 
 CPP_FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = ./main.cpp
+SRC = ./main.cpp ./add_ons.cpp ./Functor.cpp
 
-$(OBJS) = $(subst SRC %.c=.o)
+OBJS = $(SRC %.c=.o)
 
 DEBUG = -g 
 
@@ -15,10 +15,10 @@ VALGRIND = valgrind --leak-check=full --show-leak-kinds=all
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-	$(GCC) $(DEBUG) $(CPP_FLAGS) $(SRC) -o $@
+	$(GCC) $(DEBUG) $(SRC) -o $@
 
-$(OBJS) : 
-	$(GCC) -c $(SRC)
+%.o : %.cpp
+	$(GCC) $(CPP_FLAGS) -c $(SRC) 
 
 leaks : all
 	$(VALGRIND) ${NAME}
