--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -1,17 +1,22 @@
-NAME = pognali
+NAME = stack_and_heap
 GCC = c++
 CPP_FLAGS = -Wall -Wextra -Werror -std=c++98
 SRC = ./newZombie.cpp ./randomChump.cpp ./Zombie.cpp ./main.cpp
+OBJS = $(subst .cpp,.o,$(SRC))
 
 all : $(NAME)
 
-$(NAME) :
-	$(GCC) $(CPP_FLAGS) $(SRC) -o $@
+$(NAME) : $(OBJS)
+	$(GCC) $(OBJS) -o $@
+	
+%.o: %.cpp
+	$(GCC) -c $(CPP_FLAGS) $< -o $@
 
 clean:
-	rm $(NAME)
+	rm -f $(OBJS)
 
 fclean: clean 
+	rm -f $(NAME)
 
 re: fclean all
 
