--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -5,6 +5,7 @@ SRC = ./HumanA.cpp ./HumanB.cpp ./Weapon.cpp ./main.cpp
 OBJS = $(SRC:.cpp=.o)
 GREEN = \033[0;32m
 RESET = \033[0m
+VALGRIND = valgrind --leak-check=full --show-leak-kinds=all
 
 all: $(NAME)
 
@@ -18,9 +19,12 @@ $(NAME): $(OBJS)
 clean:
 	@rm -f $(OBJS)
 
+leaks: all
+	$(VALGRIND) $(NAME)
+
 fclean: clean
 	@rm -f $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re leaks
