--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,12 +1,10 @@
-NAME = ZombieHorde
+NAME = ./ZombieHorde
 
 CXX = c++
 
 CPP_FLAGS = -Wall -Wextra -Werror -std=c++98
 
-# DEBUG = -g 
-
-# VALGRIND = valgrind --leak-check=full --show-leak-kinds=all
+VALGRIND = valgrind --leak-check=full --show-leak-kinds=all
 
 SRC = ./ZombieHorde.cpp ./Zombie.cpp ./main.cpp
 OBJS = $(SRC:.cpp=.o)
@@ -14,19 +12,20 @@ OBJS = $(SRC:.cpp=.o)
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-	$(CXX) $(CPP_FLAGS) $(OBJS) -o $@
+	@$(CXX) $(CPP_FLAGS) $(OBJS) -o $@
 
-$(OBJS) : $(SRC)
-	$(CXX) $(CPP_FLAGS) -c $(SRC)
+%.o: %.cpp
+	@$(CXX) -c $(CPP_FLAGS) $< -o $@
 
 leaks : all
 	$(VALGRIND) $(NAME)
 
 clean : 
-	@rm $(OBJS)
+	@rm -f $(OBJS)
+
 fclean : clean 
-	@rm $(NAME)
+	@rm -f $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean leaks re
+.PHONY: all clean fclean re leaks 
