--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,11 @@
 		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"cstring": "cpp",
+		"optional": "cpp",
+		"ranges": "cpp",
+		"span": "cpp"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
