--- a/cpp05/ex01/Makefile
+++ b/cpp05/ex01/Makefile
@@ -17,7 +17,7 @@ CXX = c++
 
 CPP_FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Bureaucrat.cpp
+SRC = main.cpp Bureaucrat.cpp Form.cpp
 
 OBJS = $(SRC:.cpp=.o)
 
