cpp06, ex00 added

--- a/cpp05/ex03/Makefile
+++ b/cpp05/ex03/Makefile
@@ -14,8 +14,7 @@ endef
 NAME = ./intern 
 
 CXX = c++
-
-CPP_FLAGS = -Wall -Wextra -Werror -g -std=c++98
+CPP_FLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC_FILES = main.cpp Bureaucrat.cpp AForm.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp ShrubberyCreationForm.cpp Intern.cpp
 
@@ -31,7 +30,7 @@ all : $(NAME)
 $(NAME): $(OBJS)
 	@$(CXX) $(OBJS) -o $@
 	@$(PRINT_LOADING)
-	@echo "$(GREEN)It's a final countdown$(RESET)"
+	@echo "$(GREEN)Intern is ready to work$(RESET)"
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
 	@mkdir -p $(OBJ_DIR)
