--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
 		"cstring": "cpp",
 		"optional": "cpp",
 		"ranges": "cpp",
-		"span": "cpp"
+		"span": "cpp",
+		"*.tpp": "cpp"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
