--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,9 @@
 		"optional": "cpp",
 		"ranges": "cpp",
 		"span": "cpp",
-		"*.tpp": "cpp"
+		"*.tpp": "cpp",
+		"list": "cpp",
+		"set": "cpp"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
